--- a/docvitta/templates/homepage/about-us.html
+++ b/docvitta/templates/homepage/about-us.html
@@ -7,9 +7,9 @@
         <div class="wrapper2">
             <div class="sub-banner-inner-box banner-inner-box position-relative text-center w-100 float-left">
                 <h1 data-aos="fade-up" data-aos-duration="700">О нас</h1>
-                <p data-aos="fade-up" data-aos-duration="700">Duis aute irure dolor in reprehenderit in voluptate velit
-                    essecillum <br>
-                    dolore fugiat nulla pariatur</p>
+<!--                <p data-aos="fade-up" data-aos-duration="700">Duis aute irure dolor in reprehenderit in voluptate velit-->
+<!--                    essecillum <br>-->
+<!--                    dolore fugiat nulla pariatur</p>-->
             </div>
         </div>
     </section>
