--- a/docvitta/templates/header.html
+++ b/docvitta/templates/header.html
@@ -37,13 +37,14 @@
                         </li>
 
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle p-0" href="{% url 'homepage:rules' %}" id="navbarDropdown3" role="button"
+                            <a class="nav-link dropdown-toggle p-0"  id="navbarDropdown3" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Пациентам
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown3">
                                 <ul class="list-unstyled mb-0">
                                     <li><a class="dropdown-item" href="https://docvitta.infoclinica.ru/pricelist" target="_blank">Платные услуги</a></li>
+                                    <li><a class="dropdown-item" href="/page/7/">Информация для пациентов</a></li>
                                     <li><a class="dropdown-item" href="/article/">Статьи</a></li>
                                 </ul>
                             </div>
