--- a/docvitta/templates/homepage/articles.html
+++ b/docvitta/templates/homepage/articles.html
@@ -52,15 +52,15 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-12 col-sm-12 col-12 column">
-                    <div class="box1 box2">
-                        <h5 data-aos="fade-up" data-aos-duration="700">Для пациентов</h5>
-                        <ul class="list-unstyled mb-0">
-                            {% for page in pages %}
-                            <li class="text-size-16" data-aos="fade-up" data-aos-duration="700"><a
-                                    href="/page/{{ page.id }}">{{ page.name }}</a></li>
-                            {% endfor %}
-                        </ul>
-                    </div>
+<!--                    <div class="box1 box2">-->
+<!--                        <h5 data-aos="fade-up" data-aos-duration="700">Для пациентов</h5>-->
+<!--                        <ul class="list-unstyled mb-0">-->
+<!--                            {% for page in pages %}-->
+<!--                            <li class="text-size-16" data-aos="fade-up" data-aos-duration="700"><a-->
+<!--                                    href="/page/{{ page.id }}">{{ page.name }}</a></li>-->
+<!--                            {% endfor %}-->
+<!--                        </ul>-->
+<!--                    </div>-->
                     {% include 'socnetworks.html' %}
                 </div>
             </div>
