--- a/docvitta/templates/homepage/index.html
+++ b/docvitta/templates/homepage/index.html
@@ -25,7 +25,7 @@
                         </div>
                     </div>
                     <div class="banner-details d-flex position-relative">
-                        <figure class="mb-0">
+                        <figure class="mb-0 pl-5">
                             <img src="{% static 'assets/images/doctor-img4.png' %}" alt="doctor-img">
                         </figure>
 <!--                        <div class="banner-details-txt">-->
