--- a/docvitta/templates/homepage/contact.html
+++ b/docvitta/templates/homepage/contact.html
@@ -84,7 +84,7 @@
     <!-- MAP SECTION -->
     <div class="responsive-map w-100 float-left padding-top padding-bottom">
         <iframe
-            src="https://yandex.ru/map-widget/v1/?ll=37.933333%2C55.823487&mode=whatshere&whatshere%5Bpoint%5D=37.933217%2C55.823702&whatshere%5Bzoom%5D=17&z=17.08"
+            src="https://yandex.ru/map-widget/v1/?z=12&ol=biz&oid=86760931983"
             width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
