--- a/docvitta/templates/homepage/index.html
+++ b/docvitta/templates/homepage/index.html
@@ -14,7 +14,7 @@
                         <p data-aos="fade-up" data-aos-duration="700">Забота - наше призвание.
                             Изменить систему здравоохранения к лучшему.
                             Мы здесь на всю жизнь.
-                            Будьте здоровы!.</p>
+                            Будьте здоровы!</p>
                         <div class="banner-btn d-flex align-items-center" data-aos="fade-up" data-aos-duration="700">
                             <a href="https://docvitta.infoclinica.ru/login">Записаться на консультацию</a>
                             <a href="https://docvitta.infoclinica.ru/login">
