--- a/docvitta/templates/base.html
+++ b/docvitta/templates/base.html
@@ -18,14 +18,14 @@
     {% endblock %}
 </head>
 <body>
-<!--&lt;!&ndash; Preloader &ndash;&gt;-->
+<!-- Preloader -->
 <!--    <div class="loader-mask">-->
 <!--        <div class="loader">-->
 <!--            <div></div>-->
 <!--            <div></div>-->
 <!--        </div>-->
 <!--    </div>-->
-<!--&lt;!&ndash; Preloader &ndash;&gt;-->
+<!-- Preloader -->
 {% include 'header.html' %}
 
 
