--- a/docvitta/templates/base.html
+++ b/docvitta/templates/base.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block title %}{% endblock %}</title>
     <link rel="icon" href="{% static 'assets/images/fav-icon.png' %}">
+    <meta name="yandex-verification" content="2e72c8480e8c0fbe" />
     {% block page_css %}
     <link rel="stylesheet" href="{% static 'assets/css/all.css' %}">
     <link rel="stylesheet" href="{% static 'assets/bootstrap/bootstrap.min.css' %}">
