--- a/docvitta/templates/base.html
+++ b/docvitta/templates/base.html
@@ -8,6 +8,7 @@
     <title>{% block title %}{% endblock %}</title>
     <link rel="icon" href="{% static 'assets/images/fav-icon.png' %}">
     <meta name="yandex-verification" content="2e72c8480e8c0fbe" />
+
     {% block page_css %}
     <link rel="stylesheet" href="{% static 'assets/css/all.css' %}">
     <link rel="stylesheet" href="{% static 'assets/bootstrap/bootstrap.min.css' %}">
@@ -36,5 +37,6 @@
 {% include 'footer.html' %}
 {% block scripts %}{% endblock %}
 {% include 'metrika.html' %}
+{% include 'google_tag.html' %}
 </body>
 </html>
