--- a/docvitta/templates/base.html
+++ b/docvitta/templates/base.html
@@ -22,6 +22,10 @@
     {% endblock %}
 </head>
 <body>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PDDFXKC4"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 <!-- Preloader -->
 <!--    <div class="loader-mask">-->
 <!--        <div class="loader">-->
