--- a/docvitta/templates/base.html
+++ b/docvitta/templates/base.html
@@ -10,7 +10,7 @@
     {% include 'google_tag.html' %}
     <link rel="icon" href="{% static 'assets/images/fav-icon.png' %}">
     <meta name="yandex-verification" content="2e72c8480e8c0fbe" />
-
+    <meta name="google-site-verification" content="BpU9vcltrooQ2PGi9TuHw8SD1xdOB8eTNsS3c1BZU0c" />
     {% block page_css %}
     <link rel="stylesheet" href="{% static 'assets/css/all.css' %}">
     <link rel="stylesheet" href="{% static 'assets/bootstrap/bootstrap.min.css' %}">
