--- a/docvitta/templates/getintouch.html
+++ b/docvitta/templates/getintouch.html
@@ -10,8 +10,8 @@
                     <h2>Обеспечим Вам лучшее медицинское обслуживание!</h2>
                 </div>
                 <div class="submit-btn">
-                    <a href="https://docvitta.infoclinica.ru/login">Записаться на прием</a>
-                    <a href="https://docvitta.infoclinica.ru/login">
+                    <a href="https://docvitta.infoclinica.ru/specialists">Записаться на прием</a>
+                    <a href="https://docvitta.infoclinica.ru/specialists">
                         <figure class="mb-0">
                             <img src="{% static 'assets/images/top-arrow.png' %}" alt="top-arrow">
                         </figure>
