--- a/docvitta/templates/socnetworks.html
+++ b/docvitta/templates/socnetworks.html
@@ -3,24 +3,20 @@
     <h5 data-aos="fade-up" data-aos-duration="700">Подписывайтесь</h5>
     <div class="">
         <ul class="mb-0 list-unstyled " data-aos="fade-up" data-aos-duration="700">
-
-            <a
-                    href="https://instagram.com/doctorvitta" target="_blank" class="text-decoration-none"><img
-                    class="fab fa-instagram" src="{% static 'assets/images/instagram.png'%}"></a>
             <a href="https://ok.ru/group/70000004744559" target="_blank"
                class="text-decoration-none"><img
-                    class="fab fa-facebook-f" src="{% static 'assets/images/facebook.png'%}"></a>
+                    class="fab fa-odnoklassniki" src="{% static 'assets/images/odnoklassniki.png'%}"></a>
             <a
                     href="https://dzen.ru/doctorvitta" target="_blank"
-                    class="text-decoration-none"><img class="fab fa-twitter"
+                    class="text-decoration-none"><img class="fab fa-bookmark"
                                                       src="{% static 'assets/images/bookmark_1.png'%}"></a>
             <a
                     href="https://t.me/docvitta" target="_blank"
-                    class="text-decoration-none"><img class="fab fa-twitter"
+                    class="text-decoration-none"><img class="fab fa-telegram"
                                                       src="{% static 'assets/images/telegram.png'%}"></a>
             <a href="https://vk.com/doctorvitta" target="_blank"
                class=""><img
-                    class="fab fa-linkedin-in" src="{% static 'assets/images/vk.png'%}"></a>
+                    class="fab fa-vk" src="{% static 'assets/images/vk.png'%}"></a>
         </ul>
     </div>
 </div>
