--- a/docvitta/templates/base.html
+++ b/docvitta/templates/base.html
@@ -2,30 +2,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   <!-- Yandex.Metrika counter -->
-<script type="text/javascript" >
-   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-   m[i].l=1*new Date();
-   for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
-   k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
-
-   ym(96158867, "init", {
-        clickmap:true,
-        trackLinks:true,
-        accurateTrackBounce:true,
-        webvisor:true,
-        ecommerce:"dataLayer"
-   });
-</script>
-<noscript><div><img src="https://mc.yandex.ru/watch/96158867" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-<!-- /Yandex.Metrika counter -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block title %}{% endblock %}</title>
     {% include 'metrika.html' %}
     {% include 'google_tag.html' %}
+    {% include 'calltouch.html' %}
     <link rel="icon" href="{% static 'assets/images/fav-icon.png' %}">
     <meta name="yandex-verification" content="2e72c8480e8c0fbe" />
     <meta name="google-site-verification" content="BpU9vcltrooQ2PGi9TuHw8SD1xdOB8eTNsS3c1BZU0c" />
