--- a/docvitta/templates/footer.html
+++ b/docvitta/templates/footer.html
@@ -11,9 +11,10 @@
                     <p>Общество с ограниченной ответственностью  «ВиттаМед»
                         ИНН: 5001154570<br>
                         ОГРН: 1235000103337<br>
-                        Юридический адрес: 143900, Россия, Московская Обл., Балашиха, Тер. западная коммуная зона, Энтузиастов ш., влд. 1а, пом. 1<br>
-                        Ежедневно с 06-30 до 19-30</p>
+                        Юридический адрес: 143900, Россия, Московская Обл., Балашиха, Тер. западная коммуная зона, Энтузиастов ш., влд. 1а, пом. 1</p>
+                    <p>Ежедневно с 06-30 до 19-30</p>
                     <p class="mb-0">Сведения о лицензии - Соискатель</p>
+                    <p class="mb-0"><a href="https://anketa.rosminzdrav.ru/staticogvjustank/30/1" target="_blank">Амбулаторные условия</a></p>
                 </div>
 
                 <div class="footer-box contact-details-box">
