--- a/docvitta/templates/homepage/index.html
+++ b/docvitta/templates/homepage/index.html
@@ -24,9 +24,9 @@
                             </a>
                         </div>
                     </div>
-                    <div class="banner-details d-flex position-relative">
+                    <div class="banner-details d-flex position-relative" >
                         <figure class="mb-0 pl-5">
-                            <img src="{% static 'assets/images/doctor-img4.png' %}" alt="doctor-img">
+                            <img src="{% static 'assets/images/doctor-img7.png' %}" alt="doctor-img" style="width: 450px;">
                         </figure>
                     </div>
                 </div>
