--- a/docvitta/templates/base.html
+++ b/docvitta/templates/base.html
@@ -9,7 +9,9 @@
     {% include 'metrika.html' %}
     {% include 'google_tag.html' %}
     {% include 'calltouch.html' %}
-    <link rel="icon" href="{% static 'assets/images/fav-icon.png' %}">
+    <link rel="icon" href="{% static 'assets/images/fav_icon.ico' %}" type="image/x-icon">
+    <link rel="icon" href="{% static 'assets/images/Dr_Vitta_logo_for_fav_2.png' %}" type="image/png">
+<!--    <link rel="icon" href="{% static 'assets/images/Dr_Vitta_logo_for_fav_2.svg' %}" type="image/svg+xml">-->
     <meta name="yandex-verification" content="2e72c8480e8c0fbe" />
     <meta name="google-site-verification" content="BpU9vcltrooQ2PGi9TuHw8SD1xdOB8eTNsS3c1BZU0c" />
     {% block page_css %}
