add sales, sitemaps,

--- a/docvitta/templates/homepage/about-us.html
+++ b/docvitta/templates/homepage/about-us.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}Клиника "Доктор Витта"{% endblock %}
+{% block title %}Клиника "Доктор Витта" - О клинике{% endblock %}
+    {% block description %}
+    <meta name="description" content="Медицинская клиника Доктор Витта - качественная медицинская помощь для вашего здоровья. Врачи-специалисты, современное оборудование, разнообразные услуги. Запишитесь уже сегодня!"/>
+    {% endblock %}
 {% block content %}
     <!-- BANNER SECTION -->
     <section class="w-100 float-left sub-banner-con position-relative">
