--- a/docvitta/templates/homepage/contact.html
+++ b/docvitta/templates/homepage/contact.html
@@ -1,8 +1,10 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block title %}Клиника "Доктор Витта" - Контакты{% endblock %}
+    {% block description %}
+    <meta name="description" content="Медицинская клиника Доктор Витта - верное решение для вашего здоровья. Опытные врачи, инновационное оборудование, широкий спектр услуг. Записывайтесь на прием и оставьте свое здоровье в надежных руках!"/>
+    {% endblock %}
 {% block content %}
-
     <!-- BANNER SECTION -->
     <section class="w-100 float-left contact-banner-sec sub-banner-con position-relative">
         <div class="wrapper2">
