--- a/docvitta/templates/base.html
+++ b/docvitta/templates/base.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    {% block description %}
+    <meta name="description" content="Медицинская клиника Доктор Витта - здоровье в надежных руках. Профессиональные врачи, современное оборудование, широкий спектр услуг."/>
+    {% endblock %}
     <title>{% block title %}{% endblock %}</title>
     {% include 'metrika.html' %}
     {% include 'google_tag.html' %}
