--- a/docvitta/templates/homepage/index.html
+++ b/docvitta/templates/homepage/index.html
@@ -29,7 +29,7 @@
                     </div>
                     <div class="banner-details d-flex position-relative" >
                         <figure class="mb-0 pl-5">
-                            <img src="{% static 'assets/images/doctor-img7.png' %}" alt="doctor-img" style="width: 450px;">
+                            <img src="{% static 'assets/images/doctor-img7.png' %}" alt="doctor-img" style="">
                         </figure>
                     </div>
                 </div>
